1.10.0/_sources/reference_cmd/dipy_track_pft.rst.txt
.. dipy_track_pft:

==============
dipy_track_pft
==============

Synopsis
--------

Workflow for Particle Filtering Tracking.

This workflow uses a saved peaks and metrics (PAM) file as input.  See :footcite:p:`Girard2014` for further details about the method.

Usage
-----

.. code-block:: bash

    dipy_track_pft [OPTIONS] pam_files wm_files gm_files csf_files seeding_files

Input Parameters
----------------

* ``pam_files``

  Path to the peaks and metrics files. This path may contain
   wildcards to use multiple masks at once.

* ``wm_files``

  Path to white matter partial volume estimate for tracking (CMC).

* ``gm_files``

  Path to grey matter partial volume estimate for tracking (CMC).

* ``csf_files``

  Path to cerebrospinal fluid partial volume estimate for tracking
  (CMC).

* ``seeding_files``

  A binary image showing where we need to seed for tracking.

General Options
---------------

* ``--step_size``

  Step size (in mm) used for tracking.

* ``--seed_density``

  Number of seeds per dimension inside voxel.
   For example, seed_density of 2 means 8 regularly distributed
   points in the voxel. And seed density of 1 means 1 point at the
   center of the voxel.

* ``--pmf_threshold``

  Threshold for ODF functions.

* ``--max_angle``

  Maximum angle between streamline segments (range [0, 90]).

* ``--pft_back``

  Distance in mm to back track before starting the particle filtering
  tractography. The total particle filtering
  tractography distance is equal to back_tracking_dist +
  front_tracking_dist.

* ``--pft_front``

  Distance in mm to run the particle filtering tractography after the
  the back track distance. The total particle filtering
  tractography distance is equal to back_tracking_dist +
  front_tracking_dist.

* ``--pft_count``

  Number of particles to use in the particle filter.

* ``--save_seeds``

  If true, save the seeds associated to their streamline
  in the 'data_per_streamline' Tractogram dictionary using
  'seeds' as the key.

* ``--min_wm_pve_before_stopping``

  Minimum white matter pve (1 - stopping_criterion.include_map -
  stopping_criterion.exclude_map) to reach before allowing the
  tractography to stop.

Output Options
--------------

* ``--out_dir``

  Output directory. (default current directory)

* ``--out_tractogram``

  Name of the tractogram file to be saved.

References
----------

.. footbibliography::

Garyfallidis, E., M. Brett, B. Amirbekian, A. Rokem, S. Van Der Walt, M. Descoteaux, and I. Nimmo-Smith. Dipy, a library for the analysis of diffusion MRI data. Frontiers in Neuroinformatics, 1-18, 2014.